# Next-Word-Predictor

./: README.md  pyproject.toml
src/next_word_predictor/: __init__.py  config.py  data.py  model.py  predict.py  train.py  utils.py
tests/: test_basic.py
